--- a/assets/styles/blocks/core-button.scss
+++ b/assets/styles/blocks/core-button.scss
@@ -2,16 +2,23 @@
  * core/button
  */
 .wp-block-button {
+  &__link {
+    transition-property: background-color, border-color, color;
+    transition-duration: 200ms;
+    transition-timing-function: ease-in-out;
+  }
+
   // outline
   &.is-style-outline {
     .wp-block-button__link {
       &:not(.has-text-color, .has-background) {
-        background: transparent;
+        background-color: transparent;
         color: var(--wp--custom--color--primary);
 
         &:hover,
         &:focus {
-          background: var(--wp--preset--color--primary);
+          background-color: var(--wp--preset--color--primary);
+          border-color: var(--wp--preset--color--primary);
           color: var(--wp--custom--color--primary-contrast);
         }
       }
