--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@ Author URI: https://github.com/marierigal
 Description: A WordPress theme for USM website.
 Requires at least: 6.4
 Tested up to: 6.4.2
-Requires PHP: 7.4
+Requires PHP: 8.2
 Version: 1.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: usm
+Tags:
 */
