--- a/templates/page-full-width.html
+++ b/templates/page-full-width.html
@@ -1,12 +1,10 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"var:preset|spacing|large","bottom":"var:preset|spacing|large"}}},"layout":{"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"default"}} -->
 <main
   class="wp-block-group"
-  style="margin-top:var(--wp--preset--spacing--large);margin-bottom:var(--wp--preset--spacing--large)"
+  style="margin-top:0;margin-bottom:0"
 >
-  <!-- wp:post-title {"level":1,"align":"wide"} /-->
-
   <!-- wp:post-content {"align":"wide"} /-->
 </main>
 <!-- /wp:group -->
