--- a/src/blocks/player-thumbnail/style.scss
+++ b/src/blocks/player-thumbnail/style.scss
@@ -39,10 +39,14 @@
     }
 
     &__name {
+      font-size: var(--wp--preset--font-size--x-large);
+    }
+
+    &__name,
+    &__position {
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
-      font-size: var(--wp--preset--font-size--large);
     }
 
     &__position,
