--- a/src/blocks/sponsors-slider/style.scss
+++ b/src/blocks/sponsors-slider/style.scss
@@ -8,13 +8,18 @@
     margin: 0;
     padding: 0;
 
+    &__slide,
+    &__slide__link {
+      display: flex;
+      flex-direction: column;
+    }
+
     &__slide {
       padding: 0 8px;
-      max-width: 300px;
+      width: 300px;
       text-align: center;
 
       &__link {
-        display: block;
         color: inherit;
         text-decoration: none;
 
@@ -25,13 +30,14 @@
       }
 
       &__thumbnail {
+        margin: 0;
         height: 200px;
 
         &__image {
           display: block;
           opacity: 1;
           transition: opacity 200ms ease-in-out;
-          max-width: 100%;
+          width: 100%;
           height: 100%;
           object-fit: contain;
         }
@@ -39,12 +45,11 @@
 
       &__name {
         margin: 16px 0 0;
-        //font-size: 16px;
-        //font-weight: 600;
       }
 
       &__content {
-        //font-size: 0.8em;
+        align-self: center;
+        text-align: justify;
       }
     }
 
