fix(templates): fix default templates content width

--- a/templates/page.html
+++ b/templates/page.html
@@ -5,9 +5,9 @@
   class="wp-block-group"
   style="margin-top:var(--wp--preset--spacing--large);margin-bottom:var(--wp--preset--spacing--large)"
 >
-  <!-- wp:post-title {"level":1} /-->
+  <!-- wp:post-title {"level":1,"align":"wide"} /-->
 
-  <!-- wp:post-content /-->
+  <!-- wp:post-content {"align":"wide"} /-->
 </main>
 <!-- /wp:group -->
 
