--- a/templates/page-no-title.html
+++ b/templates/page-no-title.html
@@ -5,7 +5,7 @@
   class="wp-block-group"
   style="margin-top:var(--wp--preset--spacing--large);margin-bottom:var(--wp--preset--spacing--large)"
 >
-  <!-- wp:post-content /-->
+  <!-- wp:post-content {"align":"wide"} /-->
 </main>
 <!-- /wp:group -->
 
