fix(style): fix forminator checkbox style

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,6 +10,16 @@ footer {
   margin-block-start: 0;
 }
 
+/* ACF */
 .acf-block-preview {
   display: contents;
+}
+
+/* Forminator */
+.forminator-checkbox__wrapper {
+  align-items: center !important;
+
+  .forminator-checkbox-box {
+    margin-top: 8px;
+  }
 }
