feat(blocks): add usm/custom-sidebar block

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -5,9 +5,9 @@
   class="wp-block-group"
   style="margin-top:var(--wp--preset--spacing--large);margin-bottom:var(--wp--preset--spacing--large)"
 >
-  <!-- wp:query-title {"type":"archive","align":"wide"} /-->
+  <!-- wp:query-title {"type":"archive","showPrefix":false,"align":"wide"} /-->
 
-  <!-- wp:pattern {"slug":"usm/posts-grid"} /-->
+  <!-- wp:pattern {"slug":"usm/posts-grid","align":"wide"} /-->
 </main>
 <!-- /wp:group -->
 
