--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -15,7 +15,7 @@
 
     <!-- wp:column {"width":"33.33%"} -->
     <div class="wp-block-column" style="flex-basis:33.33%">
-      <!-- wp:template-part {"slug":"sidebar","area":"sidebar"} /-->
+      <!-- wp:template-part {"slug":"sidebar","tagName":"aside"} /-->
     </div>
     <!-- /wp:column -->
   </div>
