--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,7 @@
 >
   <!-- wp:query-title {"type":"search","align":"wide"} /-->
 
-  <!-- wp:pattern {"slug":"usm/posts-grid"} /-->
+  <!-- wp:pattern {"slug":"usm/posts-grid","align":"wide"} /-->
 </main>
 <!-- /wp:group -->
 
