--- a/templates/home.html
+++ b/templates/home.html
@@ -5,23 +5,20 @@
   class="wp-block-group"
   style="margin-top:var(--wp--preset--spacing--large);margin-bottom:var(--wp--preset--spacing--large)"
 >
-  <!-- wp:query {"query":{"perPage":1,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false},"align":"wide"} -->
+  <!-- wp:query {"query":{"perPage":1,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"only","inherit":false},"align":"wide"} -->
   <div class="wp-block-query alignwide">
     <!-- wp:post-template {"layout":{"type":"default"}} -->
     <!-- wp:pattern {"slug":"usm/horizontal-post"} /-->
     <!-- /wp:post-template -->
 
-    <!-- wp:query-no-results -->
-    <!-- wp:pattern {"slug":"usm/no-results"} /-->
-    <!-- /wp:query-no-results -->
+    <!-- wp:separator {"className":"is-style-dots"} -->
+    <hr class="wp-block-separator has-alpha-channel-opacity is-style-dots" />
+    <!-- /wp:separator -->
+    <!-- /wp:post-template -->
   </div>
   <!-- /wp:query -->
 
-  <!-- wp:separator {"className":"is-style-dots"} -->
-  <hr class="wp-block-separator has-alpha-channel-opacity is-style-dots"/>
-  <!-- /wp:separator -->
-
-  <!-- wp:query {"query":{"perPage":"6","pages":0,"offset":"1","postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false},"align":"wide"} -->
+  <!-- wp:query {"query":{"perPage":"6","pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"exclude","inherit":false},"enhancedPagination":true,"align":"wide"} -->
   <div class="wp-block-query alignwide">
     <!-- wp:post-template {"layout":{"type":"grid","columnCount":3}} -->
     <!-- wp:pattern {"slug":"usm/vertical-post"} /-->
@@ -34,6 +31,10 @@
 
     <!-- wp:query-pagination-next /-->
     <!-- /wp:query-pagination -->
+
+    <!-- wp:query-no-results -->
+    <!-- wp:pattern {"slug":"usm/no-results"} /-->
+    <!-- /wp:query-no-results -->
   </div>
   <!-- /wp:query -->
 </main>
