--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   class="wp-block-group"
   style="margin-top:var(--wp--preset--spacing--large);margin-bottom:var(--wp--preset--spacing--large)"
 >
-  <!-- wp:pattern {"slug":"usm/posts-grid"} /-->
+  <!-- wp:pattern {"slug":"usm/posts-grid,"align":"wide"} /-->
 </main>
 <!-- /wp:group -->
 
