fix: ignore acf preview bloc only on certain blocks

--- a/src/blocks/short-and-socks-tag/style.scss
+++ b/src/blocks/short-and-socks-tag/style.scss
@@ -2,6 +2,11 @@
 * BLOCK: License Gifts Tag
 */
 
+// acf preview wrapper
+.wp-block-usm-short-and-socks-tag {
+  display: contents;
+}
+
 .usm-short-and-socks-tag {
   display: flex;
   gap: 4px;
