feat: update templates with custom sidebar

--- a/templates/page-with-sidebar-no-title.html
+++ b/templates/page-with-sidebar-no-title.html
@@ -15,7 +15,7 @@
 
     <!-- wp:column {"width":"33.33%"} -->
     <div class="wp-block-column" style="flex-basis:33.33%">
-      <!-- wp:template-part {"slug":"sidebar","tagName":"aside"} /-->
+      <!-- wp:usm/custom-sidebar {"name":"usm/custom-sidebar","data":{"default_sidebar":2254,"_default_sidebar":"field_65e3988f6d035","default":"","_default":"field_65e47c3a2f412"},"mode":"preview"} /-->
     </div>
     <!-- /wp:column -->
   </div>
