--- a/templates/home.html
+++ b/templates/home.html
@@ -14,9 +14,9 @@
     <!-- wp:separator {"className":"is-style-dots"} -->
     <hr class="wp-block-separator has-alpha-channel-opacity is-style-dots" />
     <!-- /wp:separator -->
-    <!-- /wp:post-template -->
+    <!-- /wp:query -->
   </div>
-  <!-- /wp:query -->
+  <!-- /wp:group -->
 
   <!-- wp:query {"query":{"perPage":"6","pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"exclude","inherit":false},"enhancedPagination":true,"align":"wide"} -->
   <div class="wp-block-query alignwide">
